--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "mapvgl": "^1.0.0-beta.127",
+    "element-ui": "^2.15.2",
     "normalize.css": "7.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -23,6 +23,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
