--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-rc.11",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.2",
     "element-ui": "^2.15.2",
     "normalize.css": "7.0.0",
     "vue": "^2.6.11",
+    "vue-echarts": "^6.0.0-rc.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
