--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-rc.11",
+    "amfe-flexible": "^2.2.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
     "normalize.css": "7.0.0",
     "vue": "^2.6.11",
     "vue-echarts": "^6.0.0-rc.6",
     "vue-router": "^3.2.0",
+    "vue-seamless-scroll": "^1.1.23",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "postcss-px2rem": "^0.3.0",
+    "postcss-pxtorem-include": "0.0.1",
     "px2rem-loader": "^0.1.9",
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^6.0.7",
