--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "amfe-flexible": "^2.2.1",
     "core-js": "^3.6.5",
     "countup.js": "^2.0.4",
+    "dayjs": "^1.10.7",
     "echarts": "^5.1.2",
     "normalize.css": "7.0.0",
     "vue": "^2.6.11",
@@ -52,8 +53,7 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {
-    }
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
