--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "countup.js": "^2.0.4",
     "dayjs": "^1.10.7",
     "echarts": "^5.1.2",
+    "echarts-liquidfill": "^3.1.0",
     "mapbox-gl": "^2.5.1",
     "normalize.css": "7.0.0",
     "vue": "^2.6.11",
